--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+---
+title: Jekyll
+my_message: UwU
+---
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1>UwU</h1>
-	<h2>Undertitel</h2>
-	<p>Paragraf</p>
-	<p>Test Discord</p>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <h1>{{ my_message | downcase }}</h1>
+  </body>
 </html>
